Fixed some layout bugs including header and footer

--- a/prospera/src/Components/AboutPage/AboutPage.css
+++ b/prospera/src/Components/AboutPage/AboutPage.css
@@ -1,7 +1,7 @@
 .aboutBody{
     font-size: 30px;
     margin-bottom: 1rem;
-    margin-top: 20rem;
+    /* margin-top: 15rem; */
 
     display: flex;
     align-items: center;
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-self: center;
+    align-items: center;
 }
 
 .rightAboutBody p {
@@ -91,7 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
+    margin: 14rem 0;
 
     color: #fff;
 }
