--- a/prospera/src/Components/Header/Header.css
+++ b/prospera/src/Components/Header/Header.css
@@ -1,7 +1,3 @@
-body{
-    left: 0;
-    right: 0;
-}
 header {
     position: fixed;
     display: flex;
@@ -16,8 +12,10 @@ header {
     right: 0;
     left:0;
 
-    z-index: 1000; 
+    z-index: 0; 
     overflow: hidden;
+
+    margin-bottom: auto;
 }
 
 
